gw-testnet/redis/gw-testnet-redis-exporter.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testnet-godwoken-redis-exporter
  namespace: gw-testnet
  labels:
    k8s-app: testnet-godwoken-redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: testnet-godwoken-redis-exporter
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: testnet-godwoken-redis-exporter
    spec:
      containers:
        - name: testnet-godwoken-redis-exporter
          image: 'oliver006/redis_exporter:v0.30.0'
          args:
            - '-redis.addr'
            - 'redis://testnet-redis-svc-v1:6379'
            - '-redis.password'
            - *****
          ports:
            - name: http
              containerPort: 9121
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
