gw-testnet/redis/gw-testnet-redis-exporter-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: testnet-godwoken-redis-exporter-ingress
  namespace: gw-testnet
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gw-testnet-redis-exporter.godwoken.cf
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: testnet-godwoken-redis-exporter
                port:
                  number: 9121
